sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:5: error: not found: value estPlusPetit
    if (estPlusPetit(i-1,1-2)){
        ^