sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  var i = 2
  while (i<getNombreValeurs() -1){
    if (estPlusPetit(i-1,1-2)){
      swap(i-1,i-2)
      i-=1
    }
    else{
      i+=1
    }
    
    
    
    
    
    
  }  
  
  
}